--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,8 @@ services:
       - api2
     ports:
       - "9000:9000"
-    # volumes:
-    #   - ./loadBalancer:/loadBalancer
+    volumes:
+      - ./loadBalancer/balancer.js:/loadBalancer/balancer.js
     environment:
       - HOSTS=http://api1:8000,http://api2:8001
 
