--- a/apiserver/package.json
+++ b/apiserver/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "pg": "^7.8.0"
+    "pg": "^7.8.0",
+    "request": "^2.88.0"
   }
 }
