--- a/loadBalancer/package.json
+++ b/loadBalancer/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "http-proxy": "^1.17.0",
     "request": "^2.88.0"
